fix: QNA_20240116_디자인 수정내용 정리.pptx - p2, 8, 9, 10 수정

--- a/base/html/is/crossroads_flow.html
+++ b/base/html/is/crossroads_flow.html
@@ -92,11 +92,13 @@
               <section class="crossroads-flow-view">
                 <div class="crossroads-flow-board">
                   <em class="tit">태릉입구역</em>
-                  <!-- 240109: 차로 클래스명 추가
-                              2차로 클래스명: lane-2
-                              3차로 클래스명: lane-3
+                  <!-- 240116: 방위가 없는 경우 클래스명 정의
+                              동: none-east
+                              서: none-west
+                              남: none-south
+                              북: none-north
                   -->
-                  <div class="flow-stats-wrap lane-3">
+                  <div class="flow-stats-wrap none-south">
                     <!-- 230913수정 : 
                       <화살표 아이콘 색상 변경시 class명 참고>
                         - 직선(위/아래) 화살표(블루) : active-blue
