fix: 지난 수요일(17일) 대면 회의에서 나온 이슈 및 QNA_20240117_디자인 수정내용 정리.pptx 수정(p9, 13, 22)

--- a/base/html/common/gnb.html
+++ b/base/html/common/gnb.html
@@ -148,12 +148,13 @@
 </div>
 <!-- //menu -->
 <aside class="aside">
-  <!-- 230918 아이콘 수정
+  <!-- 240118 알림 아이콘 클래스정 정의
               돌발 : outbreak-active 클래스 추가
               장애 : hindrance-active 클래스 추가
               돌발/장애 : outbreak-hindrance 클래스 추가
+              돌발/장애 팝업이 노출된 상태일 때 is-btnbell-active 클래스 추가
   -->
-  <button type="button" class="btn-bell outbreak-active">알림</button>
+  <button type="button" class="btn-bell outbreak-active is-btnbell-active">알림</button>
   <!-- 230918 계정설정 버튼 수정 -->
   <button type="button" class="btn-m">
     <i>M</i>
