수정내용 정리.pptx - p14 ~17 수정

--- a/base/html/cw/map_cw_view.html
+++ b/base/html/cw/map_cw_view.html
@@ -71,6 +71,7 @@
           </section>
           <!-- //cw-report -->
 
+          <!-- 240120 디자인 변경: 횡단자수 영역 전체 레이아웃 변경 -->
           <section class="stats-cw">
             <div class="stats-tit-option">
               <em class="tit">횡단자 수</em>
@@ -83,28 +84,37 @@
                 </span>
               </div>
               <!-- //stats-tit-option-bind -->
-              <span class="time-analysis">분석시간 : 3:00 ~ 15:00</span>
-              <div class="bind">
-                <label class="radio-txt2 rounded">
-                  <input type="radio" name="time1" />
-                  <span>5분</span>
-                </label>
-                <label class="radio-txt2 rounded">
-                  <input type="radio" name="time1" checked />
-                  <span>60분</span>
-                </label>
-              </div>
-              <!-- //bind -->
             </div>
             <!-- //stats-tit-option -->
             <div class="stats-num">
-              <em>498<i>명</i></em>
-              <div class="differ">
-                <span>NC 백화점 야탑점 방향 <em>289</em><i>명</i></span>
-                <span>야탑 지구대 방향 <em>209</em><i>명</i></span>
+              <em>498<i>회</i></em>
+              <div class="bind">
+                <div class="time-bind">
+                  <label class="radio-txt2 rounded">
+                    <input type="radio" name="time1" />
+                    <span>5분</span>
+                  </label>
+                  <label class="radio-txt2 rounded">
+                    <input type="radio" name="time1" checked />
+                    <span>60분</span>
+                  </label>
+                </div>
+                <!-- //time-bind -->
+                <span class="time-analysis">분석시간 : 3:00 ~ 15:00</span>
               </div>
+              <!-- //bind -->
             </div>
             <!-- //stats-num -->
+            <ul class="differ">
+              <li>
+                <span class="txt">천안브라운스톤아파트114동앞 방면</span>
+                <span class="differ-num"><em>2,098</em><i>회</i></span>
+              </li>
+              <li>
+                <span class="txt">불당아이파크아파트105동앞 방면</span>
+                <span class="differ-num"><em>9,289</em><i>회</i></span>
+              </li>
+            </ul>
             <article class="stats-content">
               <div class="chart-container">
                 <img src="https://www.dummyimage.com/342x156/ddd/000.png&text=Chart+Area" alt="퍼블리싱 확인용 더미 이미지" class="dummy-img" />
@@ -114,6 +124,7 @@
           </section>
           <!-- //stats-cw -->
 
+          <!-- 240120 디자인 변경: 무단횡단자 수 영역 전체 레이아웃 변경 -->
           <section class="stats-cw">
             <div class="stats-tit-option">
               <em class="tit">무단횡단자 수</em>
@@ -125,28 +136,37 @@
                 </span>
               </div>
               <!-- //stats-tit-option-bind -->
-              <span class="time-analysis">분석시간 : 3:00 ~ 15:00</span>
-              <div class="bind">
-                <label class="radio-txt2 rounded">
-                  <input type="radio" name="time2" />
-                  <span>5분</span>
-                </label>
-                <label class="radio-txt2 rounded">
-                  <input type="radio" name="time2" checked />
-                  <span>60분</span>
-                </label>
-              </div>
-              <!-- //bind -->
             </div>
             <!-- //stats-tit-option -->
             <div class="stats-num">
-              <em>498<i>명</i></em>
-              <div class="differ">
-                <span>NC 백화점 야탑점 방향 <em>289</em><i>명</i></span>
-                <span>야탑 지구대 방향 <em>209</em><i>명</i></span>
+              <em>498<i>회</i></em>
+              <div class="bind">
+                <div class="time-bind">
+                  <label class="radio-txt2 rounded">
+                    <input type="radio" name="time2" />
+                    <span>5분</span>
+                  </label>
+                  <label class="radio-txt2 rounded">
+                    <input type="radio" name="time2" checked />
+                    <span>60분</span>
+                  </label>
+                </div>
+                <!-- //time-bind -->
+                <span class="time-analysis">분석시간 : 3:00 ~ 15:00</span>
               </div>
+              <!-- //bind -->
             </div>
             <!-- //stats-num -->
+            <ul class="differ">
+              <li>
+                <span class="txt">천안브라운스톤아파트114동앞 방면</span>
+                <span class="differ-num"><em>2,098</em><i>회</i></span>
+              </li>
+              <li>
+                <span class="txt">불당아이파크아파트105동앞 방면</span>
+                <span class="differ-num"><em>9,289</em><i>회</i></span>
+              </li>
+            </ul>
             <article class="stats-content">
               <div class="chart-container">
                 <img src="https://www.dummyimage.com/342x156/ddd/000.png&text=Chart+Area" alt="퍼블리싱 확인용 더미 이미지" class="dummy-img" />
