fix: QNA_20240117_디자인 수정내용 정리.pptx - p18-19 수정

--- a/base/html/common/gnb.html
+++ b/base/html/common/gnb.html
@@ -153,6 +153,7 @@
               장애 : hindrance-active 클래스 추가
               돌발/장애 : outbreak-hindrance 클래스 추가
               돌발/장애 팝업이 노출된 상태일 때 is-btnbell-active 클래스 추가
+              돌발/장애가 없는 경우 돌발/장애 창이 호출될 때 active 클래스 추가
   -->
   <button type="button" class="btn-bell outbreak-active is-btnbell-active">알림</button>
   <!-- 230918 계정설정 버튼 수정 -->
