fix: QNA_20240117_디자인 수정내용 정리.pptx - p23-24 수정

--- a/base/html/cw/image_reco_set.html
+++ b/base/html/cw/image_reco_set.html
@@ -38,6 +38,7 @@
             <!-- //image-reco-set-btn-group -->
 
             <!-- 240120: 각 section태그의 자식요소로 <div class="bind"> 요소가 추가됨.  -->
+            <!-- 240128: 체크박스의 부모요소 div에 들어가있는 md 클래스 삭제  -->
             <div class="image-reco-set-view">
               <section class="set-content1" data-set-view="set1">
                 <div class="bind">
@@ -69,11 +70,11 @@
                           <th>Operation Mode</th>
                           <td>
                             <div class="chk-bind">
-                              <div class="ui checkbox primary-chkbox md c-bluesky">
+                              <div class="ui checkbox primary-chkbox c-bluesky">
                                 <input id="set1-chk1" type="checkbox" />
                                 <label for="set1-chk1">인식 동작 모드</label>
                               </div>
-                              <div class="ui checkbox primary-chkbox md c-bluesky">
+                              <div class="ui checkbox primary-chkbox c-bluesky">
                                 <input id="set1-chk2" type="checkbox" />
                                 <label for="set1-chk2">설정 모드</label>
                               </div>
@@ -121,11 +122,11 @@
                           <th>ViewBox Mode</th>
                           <td>
                             <div class="chk-bind">
-                              <div class="ui checkbox primary-chkbox md c-bluesky">
+                              <div class="ui checkbox primary-chkbox c-bluesky">
                                 <input id="set2-chk1" type="checkbox" />
                                 <label for="set2-chk1">오리지널 모드</label>
                               </div>
-                              <div class="ui checkbox primary-chkbox md c-bluesky">
+                              <div class="ui checkbox primary-chkbox c-bluesky">
                                 <input id="set2-chk2" type="checkbox" />
                                 <label for="set2-chk2">Tracking 모드</label>
                               </div>
@@ -227,11 +228,11 @@
                           <th>객체 정보 전송 모드</th>
                           <td>
                             <div class="chk-bind">
-                              <div class="ui checkbox primary-chkbox md c-bluesky">
+                              <div class="ui checkbox primary-chkbox c-bluesky">
                                 <input id="set4-chk1" type="checkbox" />
                                 <label for="set4-chk1">항상</label>
                               </div>
-                              <div class="ui checkbox primary-chkbox md c-bluesky">
+                              <div class="ui checkbox primary-chkbox c-bluesky">
                                 <input id="set4-chk2" type="checkbox" />
                                 <label for="set4-chk2">객체만 가능</label>
                               </div>
@@ -311,11 +312,11 @@
                           <th>HandOver Mode</th>
                           <td>
                             <div class="chk-bind">
-                              <div class="ui checkbox primary-chkbox md c-bluesky">
+                              <div class="ui checkbox primary-chkbox c-bluesky">
                                 <input id="set6-chk1" type="checkbox" />
                                 <label for="set6-chk1">적용</label>
                               </div>
-                              <div class="ui checkbox primary-chkbox md c-bluesky">
+                              <div class="ui checkbox primary-chkbox c-bluesky">
                                 <input id="set6-chk2" type="checkbox" />
                                 <label for="set6-chk2">미적용</label>
                               </div>
@@ -400,11 +401,11 @@
                           <th>객체 정보 전송 모드</th>
                           <td>
                             <div class="chk-bind">
-                              <div class="ui checkbox primary-chkbox md c-bluesky">
+                              <div class="ui checkbox primary-chkbox c-bluesky">
                                 <input id="set8-chk1" type="checkbox" />
                                 <label for="set8-chk1">미표시</label>
                               </div>
-                              <div class="ui checkbox primary-chkbox md c-bluesky">
+                              <div class="ui checkbox primary-chkbox c-bluesky">
                                 <input id="set8-chk2" type="checkbox" />
                                 <label for="set8-chk2">표시</label>
                               </div>
@@ -453,11 +454,11 @@
                           <th>이미지 생성 모드</th>
                           <td>
                             <div class="chk-bind">
-                              <div class="ui checkbox primary-chkbox md c-bluesky">
+                              <div class="ui checkbox primary-chkbox c-bluesky">
                                 <input id="set9-chk1" type="checkbox" />
                                 <label for="set9-chk1">종료</label>
                               </div>
-                              <div class="ui checkbox primary-chkbox md c-bluesky">
+                              <div class="ui checkbox primary-chkbox c-bluesky">
                                 <input id="set9-chk2" type="checkbox" />
                                 <label for="set9-chk2">시작</label>
                               </div>
