--- a/base/html/is/sw_camera_register.html
+++ b/base/html/is/sw_camera_register.html
@@ -40,10 +40,10 @@
                   <td colspan="2">
                     <div class="accordion-chk-list-container">
                       <ul class="accordion-chk-list">
-                        <!-- 231026 아래 ui checkbox div에 sm 클래스명 삭제하고 md 클래스명 추가 -->
+                        <!-- 240128 아래 ui checkbox div에 md 클래스명 삭제 -->
                         <li>
                           <div class="accordion-chk-list-title">
-                            <div class="ui checkbox primary-chkbox md txt-none c-bluesky">
+                            <div class="ui checkbox primary-chkbox txt-none c-bluesky">
                               <input type="checkbox" />
                               <label></label>
                             </div>
@@ -55,7 +55,7 @@
                           <!-- 지점1 -->
                           <div class="accordion-chk-list-content">
                             <div class="accordion-chk-list-title">
-                              <div class="ui checkbox primary-chkbox md txt-none c-bluesky">
+                              <div class="ui checkbox primary-chkbox txt-none c-bluesky">
                                 <input type="checkbox" />
                                 <label></label>
                               </div>
@@ -64,12 +64,12 @@
                             </div>
                             <!-- //accordion-chk-list-title -->
                             <div class="accordion-chk-list-content">
-                              <div class="ui checkbox primary-chkbox md c-bluesky">
+                              <div class="ui checkbox primary-chkbox c-bluesky">
                                 <input id="branch1-1-1" type="checkbox" />
                                 <label for="branch1-1-1">카메라 명</label>
                               </div>
                               <!-- //checkbox -->
-                              <div class="ui checkbox primary-chkbox md c-bluesky">
+                              <div class="ui checkbox primary-chkbox c-bluesky">
                                 <input id="branch1-1-2" type="checkbox" />
                                 <label for="branch1-1-2">카메라 명</label>
                               </div>
@@ -82,7 +82,7 @@
                           <!-- 지점2 -->
                           <div class="accordion-chk-list-content">
                             <div class="accordion-chk-list-title">
-                              <div class="ui checkbox primary-chkbox md txt-none c-bluesky">
+                              <div class="ui checkbox primary-chkbox txt-none c-bluesky">
                                 <input type="checkbox" />
                                 <label></label>
                               </div>
@@ -91,12 +91,12 @@
                             </div>
                             <!-- //accordion-chk-list-title -->
                             <div class="accordion-chk-list-content">
-                              <div class="ui checkbox primary-chkbox md c-bluesky">
+                              <div class="ui checkbox primary-chkbox c-bluesky">
                                 <input id="branch1-2-1" type="checkbox" />
                                 <label for="branch1-2-1">카메라 명</label>
                               </div>
                               <!-- //checkbox -->
-                              <div class="ui checkbox primary-chkbox md c-bluesky">
+                              <div class="ui checkbox primary-chkbox c-bluesky">
                                 <input id="branch1-2-2" type="checkbox" />
                                 <label for="branch1-2-2">카메라 명</label>
                               </div>
@@ -108,7 +108,7 @@
                         </li>
                         <li>
                           <div class="accordion-chk-list-title">
-                            <div class="ui checkbox primary-chkbox md txt-none c-bluesky">
+                            <div class="ui checkbox primary-chkbox txt-none c-bluesky">
                               <input type="checkbox" />
                               <label></label>
                             </div>
@@ -120,7 +120,7 @@
                           <!-- 지점1 -->
                           <div class="accordion-chk-list-content">
                             <div class="accordion-chk-list-title">
-                              <div class="ui checkbox primary-chkbox md txt-none c-bluesky">
+                              <div class="ui checkbox primary-chkbox txt-none c-bluesky">
                                 <input type="checkbox" />
                                 <label></label>
                               </div>
@@ -129,12 +129,12 @@
                             </div>
                             <!-- //accordion-chk-list-title -->
                             <div class="accordion-chk-list-content">
-                              <div class="ui checkbox primary-chkbox md c-bluesky">
+                              <div class="ui checkbox primary-chkbox c-bluesky">
                                 <input id="branch2-1-1" type="checkbox" />
                                 <label for="branch2-1-1">카메라 명</label>
                               </div>
                               <!-- //checkbox -->
-                              <div class="ui checkbox primary-chkbox md c-bluesky">
+                              <div class="ui checkbox primary-chkbox c-bluesky">
                                 <input id="branch2-1-2" type="checkbox" />
                                 <label for="branch2-1-2">카메라 명</label>
                               </div>
@@ -147,7 +147,7 @@
                           <!-- 지점2 -->
                           <div class="accordion-chk-list-content">
                             <div class="accordion-chk-list-title">
-                              <div class="ui checkbox primary-chkbox md txt-none c-bluesky">
+                              <div class="ui checkbox primary-chkbox txt-none c-bluesky">
                                 <input type="checkbox" />
                                 <label></label>
                               </div>
@@ -156,12 +156,12 @@
                             </div>
                             <!-- //accordion-chk-list-title -->
                             <div class="accordion-chk-list-content">
-                              <div class="ui checkbox primary-chkbox md c-bluesky">
+                              <div class="ui checkbox primary-chkbox c-bluesky">
                                 <input id="branch2-2-1" type="checkbox" />
                                 <label for="branch2-2-1">카메라 명</label>
                               </div>
                               <!-- //checkbox -->
-                              <div class="ui checkbox primary-chkbox md c-bluesky">
+                              <div class="ui checkbox primary-chkbox c-bluesky">
                                 <input id="branch2-2-2" type="checkbox" />
                                 <label for="branch2-2-2">카메라 명</label>
                               </div>
