--- a/base/html/set_area_info_view.html
+++ b/base/html/set_area_info_view.html
@@ -51,8 +51,8 @@
                   <td>7</td>
                   <th>기본 구역</th>
                   <td>
-                    <!-- 231021 : md클래스명 추가 -->
-                    <div class="ui checkbox primary-chkbox md txt-none c-bluesky">
+                    <!-- 240128 : md클래스명 삭제 -->
+                    <div class="ui checkbox primary-chkbox txt-none c-bluesky">
                       <input type="checkbox" />
                       <label></label>
                     </div>
