--- a/base/html/cw/cw_stats_primitive.html
+++ b/base/html/cw/cw_stats_primitive.html
@@ -71,12 +71,13 @@
                   </div>
                   <!-- //date-group -->
 
-                  <div class="ui checkbox primary-chkbox md c-bluesky">
+                  <!-- 240128: md클래스 삭제 -->
+                  <div class="ui checkbox primary-chkbox c-bluesky">
                     <input id="chk1" type="checkbox" />
                     <label for="chk1">주말 제외</label>
                   </div>
                   <!-- //checkbox -->
-                  <div class="ui checkbox primary-chkbox md c-bluesky">
+                  <div class="ui checkbox primary-chkbox c-bluesky">
                     <input id="chk2" type="checkbox" />
                     <label for="chk2">공휴일 제외</label>
                   </div>
