--- a/base/html/is/crossroads_flow.html
+++ b/base/html/is/crossroads_flow.html
@@ -71,14 +71,13 @@
                   </div>
                   <!-- //date-group -->
 
-                  <!-- 231026 md클래스명 추가 -->
-                  <div class="ui checkbox primary-chkbox md c-bluesky">
+                  <!-- 240128: md클래스 삭제 -->
+                  <div class="ui checkbox primary-chkbox c-bluesky">
                     <input type="checkbox" id="chk1" />
                     <label for="chk1">주말 제외</label>
                   </div>
                   <!-- //primary-chkbox -->
-                  <!-- 231026 md클래스명 추가 -->
-                  <div class="ui checkbox primary-chkbox md c-bluesky">
+                  <div class="ui checkbox primary-chkbox c-bluesky">
                     <input type="checkbox" id="chk2" />
                     <label for="chk2">공휴일 제외</label>
                   </div>
