fix: QNA_20240130_디자인 수정내용 정리.pptx - p22, 26, 28, 29 수정

--- a/base/html/cw/cw_roiset_list.html
+++ b/base/html/cw/cw_roiset_list.html
@@ -55,9 +55,14 @@
                 <button type="button" class="btn-data-search">검색</button>
               </div>
               <!-- //inner -->
-              <button class="ui primary basic button rounded">Excel Down</button>
+              <!-- <button class="ui primary basic button rounded">Excel Down</button> 240130: 버튼 삭제 -->
             </section>
             <!-- //filter-grouop -->
+
+            <!-- 240130: 버튼 영역 추가 -->
+            <section class="button-function-group align-right">
+              <button class="ui primary basic button rounded">Excel Down</button>
+            </section>
 
             <div class="data-tbl-very">
               <table class="ui very basic table is-fncbtn">
