--- a/base/html/cw/cw_signal_info_list.html
+++ b/base/html/cw/cw_signal_info_list.html
@@ -73,7 +73,8 @@
             <!-- //button-function-group -->
 
             <div class="data-tbl-very">
-              <table class="ui very basic table is-fncbtn-and-chkbox2">
+              <!-- 240130: is-fncbtn-and-chkbox 클래스로 변경 -->
+              <table class="ui very basic table is-fncbtn-and-chkbox">
                 <colgroup>
                   <col style="width: 72px" />
                   <col style="width: 56px" />
@@ -119,7 +120,8 @@
                     <td>서울 노원구 동일로 지하 992-1</td>
                     <td>비신호</td>
                     <td>
-                      <button class="ui secondary basic button rounded sm">Map 설정</button>
+                      <!-- 240130: sm 클래스 삭제 및 c-gray 클래스 추가 -->
+                      <button class="ui secondary basic button rounded c-gray">Map 설정</button>
                     </td>
                     <td>2021-06-07 12:31:33</td>
                   </tr>
@@ -137,7 +139,7 @@
                     <td>서울 노원구 동일로 지하 992-1</td>
                     <td>비신호</td>
                     <td>
-                      <button class="ui secondary basic button rounded sm">Map 설정</button>
+                      <button class="ui secondary basic button rounded c-gray">Map 설정</button>
                     </td>
                     <td>2021-06-07 12:31:33</td>
                   </tr>
