--- a/base/html/cw/cw_sw_list.html
+++ b/base/html/cw/cw_sw_list.html
@@ -32,6 +32,31 @@
             </div>
             <!-- //breadcrumb -->
 
+            <section class="filter-grouop">
+              <div class="inner">
+                <div class="selectbox-wrap primary label-none">
+                  <select>
+                    <option value="">구역</option>
+                    <option value="">아이템1</option>
+                    <option value="">아이템2</option>
+                    <option value="">아이템3</option>
+                  </select>
+                </div>
+                <!-- //selectbox-wrap -->
+                <div class="selectbox-wrap primary label-none">
+                  <select>
+                    <option value="">지점</option>
+                    <option value="">아이템1</option>
+                    <option value="">아이템2</option>
+                    <option value="">아이템3</option>
+                  </select>
+                </div>
+                <!-- //selectbox-wrap -->
+                <button type="button" class="btn-data-search">검색</button>
+              </div>
+            </section>
+            <!-- //filter-grouop -->
+
             <section class="button-function-group">
               <div class="left">
                 <div class="ui basic buttons">
@@ -48,7 +73,8 @@
             <!-- //button-function-group -->
 
             <div class="data-tbl-very">
-              <table class="ui very basic table">
+              <!-- 240130: table에 is-default클래스 추가 -->
+              <table class="ui very basic table is-default">
                 <colgroup>
                   <col style="width: 72px" />
                   <col style="width: 56px" />
