--- a/base/html/index.html
+++ b/base/html/index.html
@@ -2067,7 +2067,7 @@
                           <td class="col-1depth"></td>
                           <td class="col-2depth"></td>
                           <td class="col-3depth">시설물 관리</td>
-                          <td class="col-4depth"></td>
+                          <td class="col-4depth">목록</td>
                           <td class="col-5depth"></td>
                           <td class="col-type" data-type=""></td>
                           <td class="col-url">html/cw/facility_manag.html</td>
