--- a/base/html/is/sw_list.html
+++ b/base/html/is/sw_list.html
@@ -32,7 +32,8 @@
             </div>
             <!-- //breadcrumb -->
 
-            <section class="button-function-group">
+            <!-- 240130: t-margin 클래스 추가 -->
+            <section class="button-function-group t-margin">
               <div class="left">
                 <div class="ui basic buttons">
                   <button class="ui secondary basic button rounded">추가</button>
