--- a/base/html/cw/cw_check_equipment_list.html
+++ b/base/html/cw/cw_check_equipment_list.html
@@ -55,12 +55,28 @@
               </div>
               <!-- //inner -->
 
-              <div class="ui basic buttons">
+              <!-- 240130: 버튼 삭제 -->
+              <!-- <div class="ui basic buttons">
                 <button class="ui secondary basic button rounded">이력 조회</button>
+                <button class="ui primary basic button rounded">Excel Down</button>
+              </div> -->
+            </section>
+            <!-- //filter-grouop -->
+
+            <!-- 240130: 버튼 영역 추가 -->
+            <section class="button-function-group">
+              <div class="left">
+                <div class="ui basic buttons">
+                  <button class="ui secondary basic button rounded lrpd">이력 조회</button>
+                </div>
+                <!-- //buttons -->
+              </div>
+              <!-- //left -->
+              <div class="right">
                 <button class="ui primary basic button rounded">Excel Down</button>
               </div>
             </section>
-            <!-- //filter-grouop -->
+            <!-- //button-function-group -->
 
             <div class="data-tbl-very">
               <table class="ui very basic table is-fncbtn">
