--- a/base/html/dashboard_cr_a.html
+++ b/base/html/dashboard_cr_a.html
@@ -73,9 +73,9 @@
                   <div class="accidents-current">
                     <div class="chart-bind">
                       <div class="chart-wrap">
-                        <!-- 차트 사이즈 : 124(px) X 124(px) -->
+                        <!-- 240201: 차트 사이즈 변경 : 120(px) X 120(px) -->
                         <img
-                          src="https://www.dummyimage.com/124x124/ddd/000.png&amp;text=Chart+Area"
+                          src="https://www.dummyimage.com/120x120/ddd/000.png&amp;text=Chart+Area"
                           alt="퍼블리싱 확인용 더미 이미지"
                           class="dummy-img"
                         />
@@ -85,21 +85,21 @@
                         <li>
                           <span class="tit sudden2">꼬리물기</span>
                           <div class="right">
-                            <span><em>50</em>건</span>
+                            <span><em>9,999</em>건</span>
                             <span><em>62</em>%</span>
                           </div>
                         </li>
                         <li>
                           <span class="tit sudden3">정지선 위반</span>
                           <div class="right">
-                            <span><em>50</em>건</span>
+                            <span><em>8,888</em>건</span>
                             <span><em>62</em>%</span>
                           </div>
                         </li>
                         <li>
                           <span class="tit sudden4">지정차로 위반</span>
                           <div class="right">
-                            <span><em>50</em>건</span>
+                            <span><em>7,777</em>건</span>
                             <span><em>62</em>%</span>
                           </div>
                         </li>
@@ -113,14 +113,14 @@
                         <li>
                           <span class="tit sudden7">정지</span>
                           <div class="right">
-                            <span><em>20</em>건</span>
+                            <span><em>999</em>건</span>
                             <span><em>23</em>%</span>
                           </div>
                         </li>
                         <li>
                           <span class="tit sudden9">역주행</span>
                           <div class="right">
-                            <span><em>50</em>건</span>
+                            <span><em>501</em>건</span>
                             <span><em>62</em>%</span>
                           </div>
                         </li>
@@ -180,8 +180,8 @@
                       <span class="pass">2시간 전</span>
                     </li>
                     <li>
-                      <i class="ico-hindrance1"></i>
-                      <p class="txt"><em>[상태감시장치 이상]</em>태릉입구역 교차로 상태</p>
+                      <i class="ico-hindrance4"></i>
+                      <p class="txt"><em>[레이더 이상]</em>태릉입구역 교차로 상태</p>
                       <span class="pass">2시간 전</span>
                     </li>
                     <li>
