--- a/base/html/dashboard_cr_status.html
+++ b/base/html/dashboard_cr_status.html
@@ -206,13 +206,22 @@
                   <!-- //status-content-hedaer -->
                   <div class="status-chart">
                     <span class="status-chart-date">2023. 08. 01 11:00~12:00</span>
-                    <div class="status-chart-bind">
-                      <!-- 차트 사이즈 : 828(px) X 195(px) -->
+                    <!-- 240201: type2클래스 추가 -->
+                    <div class="status-chart-bind type2">
+                      <!-- 240201 차트 사이즈 변경 : 725(px) X 195(px) -->
                       <img
-                        src="https://www.dummyimage.com/828x195/ddd/000.png&amp;text=Chart+Area"
+                        src="https://www.dummyimage.com/725x195/ddd/000.png&amp;text=Chart+Area"
                         alt="퍼블리싱 확인용 더미 이미지"
                         class="dummy-img"
                       />
+                      <!-- 240201: 범례 추가 -->
+                      <div class="custom-legend">
+                        <button type="button" class="item1">소형</button>
+                        <button type="button" class="item2">버스</button>
+                        <button type="button" class="item3">트럭</button>
+                        <button type="button" class="item4">트레일러</button>
+                        <button type="button" class="item5">오토바이</button>
+                      </div>
                     </div>
                     <!-- //status-chart-bind -->
                   </div>
