--- a/base/html/is/signal_info_list.html
+++ b/base/html/is/signal_info_list.html
@@ -73,8 +73,11 @@
             <!-- //button-function-group -->
 
             <div class="data-tbl-very">
-              <!-- 231021 table에 is-fncbtn-and-chkbox2 클래스명으로 변경  -->
-              <table class="ui very basic table is-fncbtn-and-chkbox2">
+              <!-- 240130: 
+                  - table에 is-fncbtn-and-chkbox 클래스명으로 변경
+                  - Map설정 버튼 수정
+              -->
+              <table class="ui very basic table is-fncbtn-and-chkbox">
                 <colgroup>
                   <col style="width: 72px" />
                   <col style="width: 56px" />
@@ -129,7 +132,7 @@
                     <td>4</td>
                     <td>4</td>
                     <td>
-                      <button class="ui secondary basic button rounded sm">Map 설정</button>
+                      <a href="#" class="ui secondary basic button c-gray rounded">Map 설정</a>
                     </td>
                     <td>2021-06-07 12:31:33</td>
                   </tr>
@@ -150,7 +153,7 @@
                     <td>4</td>
                     <td>4</td>
                     <td>
-                      <button class="ui secondary basic button rounded sm">Map 설정</button>
+                      <a href="#" class="ui secondary basic button c-gray rounded">Map 설정</a>
                     </td>
                     <td>2021-06-07 12:31:33</td>
                   </tr>
