fix: QNA_20240130_디자인 수정내용 정리.pptx - p27 수정 - 교차로 유출입 교통량 화면 - 5차로일경우 우측 데이터 영역 스크롤   생성되게 수정

--- a/base/html/dashboard_cr_status.html
+++ b/base/html/dashboard_cr_status.html
@@ -208,12 +208,15 @@
                     <span class="status-chart-date">2023. 08. 01 11:00~12:00</span>
                     <!-- 240201: type2클래스 추가 -->
                     <div class="status-chart-bind type2">
-                      <!-- 240201 차트 사이즈 변경 : 725(px) X 195(px) -->
-                      <img
-                        src="https://www.dummyimage.com/725x195/ddd/000.png&amp;text=Chart+Area"
-                        alt="퍼블리싱 확인용 더미 이미지"
-                        class="dummy-img"
-                      />
+                      <!-- 240203: div추가 -->
+                      <div class="chart-tie">
+                        <!-- 240201 차트 사이즈 변경 : 725(px) X 195(px) -->
+                        <img
+                          src="https://www.dummyimage.com/725x195/ddd/000.png&amp;text=Chart+Area"
+                          alt="퍼블리싱 확인용 더미 이미지"
+                          class="dummy-img"
+                        />
+                      </div>
                       <!-- 240201: 범례 추가 -->
                       <div class="custom-legend">
                         <button type="button" class="item1">소형</button>
