--- a/base/html/is/map_setting.html
+++ b/base/html/is/map_setting.html
@@ -88,7 +88,8 @@
               <button type="button" class="ico-set-radar"><span class="screen-out">레이더 아이콘</span></button>
               <em>레이더</em>
             </div>
-            <div class="ico-set-item signal-light">
+            <!-- 240203: is-sub-icon 클래스 추가 -->
+            <div class="ico-set-item signal-light is-sub-icon">
               <button type="button" class="ico-set-signal-light"><span class="screen-out">신호등 아이콘</span></button>
               <em>신호등</em>
             </div>
@@ -97,6 +98,28 @@
               <em>LOS</em>
             </div>
           </div>
+          <!-- //system-nav -->
+
+          <!-- 240203: 시스템 네비게이션에서 신호등 버튼 클릭시 노출되는 서브 아이콘  -->
+          <div class="system-nav sub-signal-light">
+            <div class="ico-set-item signal-light2">
+              <button type="button" class="ico-set-signal-light2"><span class="screen-out">신호등 아이콘</span></button>
+              <em>신호등</em>
+            </div>
+            <div class="ico-set-item straight">
+              <button type="button" class="ico-set-straight"><span class="screen-out">직진 아이콘</span></button>
+              <em>직진</em>
+            </div>
+            <div class="ico-set-item left-turn">
+              <button type="button" class="ico-set-left-turn"><span class="screen-out">좌회전 아이콘</span></button>
+              <em>좌회전</em>
+            </div>
+            <div class="ico-set-item straight-left">
+              <button type="button" class="ico-set-straight-left"><span class="screen-out">직+좌 아이콘</span></button>
+              <em>직+좌</em>
+            </div>
+          </div>
+          <!-- //system-nav sub-signal-light -->
 
           <!-- 230928 말풍선 아이콘 추가 -->
           <i class="speech-bubble-guide2"><span class="screen-out">카메라를 추가하고 싶은 곳에 마커를 놓아주세요</span></i>
