--- a/base/html/dashboard_cr_status2.html
+++ b/base/html/dashboard_cr_status2.html
@@ -188,12 +188,14 @@
                   <div class="status-chart">
                     <span class="status-chart-date">2023. 08. 01 11:00~12:00</span>
                     <div class="status-chart-bind type2">
-                      <!-- 차트 사이즈 : 725(px) X 195(px) -->
-                      <img
-                        src="https://www.dummyimage.com/725x195/ddd/000.png&amp;text=Chart+Area"
-                        alt="퍼블리싱 확인용 더미 이미지"
-                        class="dummy-img"
-                      />
+                      <div class="chart-tie">
+                        <!-- 차트 사이즈 : 725(px) X 195(px) -->
+                        <img
+                          src="https://www.dummyimage.com/725x195/ddd/000.png&amp;text=Chart+Area"
+                          alt="퍼블리싱 확인용 더미 이미지"
+                          class="dummy-img"
+                        />
+                      </div>
                       <div class="custom-legend">
                         <button type="button" class="item1">소형</button>
                         <button type="button" class="item2">버스</button>
