--- a/base/html/index.html
+++ b/base/html/index.html
@@ -1803,10 +1803,38 @@
                           <td class="col-1depth"></td>
                           <td class="col-2depth"></td>
                           <td class="col-3depth">교차로 유출입 교통량</td>
-                          <td class="col-4depth"></td>
+                          <td class="col-4depth">2, 3, 4차로</td>
                           <td class="col-5depth"></td>
                           <td class="col-type" data-type=""></td>
                           <td class="col-url">html/is/crossroads_flow.html</td>
+                          <!-- <td class="col-date"></td> -->
+                          <td class="col-complete" data-complete="완료"></td>
+                          <!-- <td class="col-worker"></td> -->
+                          <td class="col-memo"></td>
+                        </tr>
+                        <tr>
+                          <td class="col-num"><!--자동입력--></td>
+                          <td class="col-1depth"></td>
+                          <td class="col-2depth"></td>
+                          <td class="col-3depth"></td>
+                          <td class="col-4depth">5차로</td>
+                          <td class="col-5depth"></td>
+                          <td class="col-type" data-type=""></td>
+                          <td class="col-url">html/is/crossroads_flow2.html</td>
+                          <!-- <td class="col-date"></td> -->
+                          <td class="col-complete" data-complete="완료"></td>
+                          <!-- <td class="col-worker"></td> -->
+                          <td class="col-memo"></td>
+                        </tr>
+                        <tr>
+                          <td class="col-num"><!--자동입력--></td>
+                          <td class="col-1depth"></td>
+                          <td class="col-2depth"></td>
+                          <td class="col-3depth"></td>
+                          <td class="col-4depth">6차로</td>
+                          <td class="col-5depth"></td>
+                          <td class="col-type" data-type=""></td>
+                          <td class="col-url">html/is/crossroads_flow3.html</td>
                           <!-- <td class="col-date"></td> -->
                           <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
